--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
   provider: ^6.0.5
+  youtube: ^1.0.1
+  custom_timer: ^0.2.3
+  font_awesome_flutter: ^10.4.0
+  firebase_performance: ^0.9.0
+  google_fonts: ^4.0.3
+  url_launcher: 6.0.14
+  audioplayers: 3.0.1
   # [jmpfbmx] End of fitlife dependencies
 
 dev_dependencies:
