--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   firebase_performance: ^0.9.0
   google_fonts: ^4.0.3
+  intl: ^0.17.0
   url_launcher: 6.0.14
   audioplayers: 3.0.1
   # [jmpfbmx] End of fitlife dependencies
