--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   table_calendar: 3.0.8
   calendar_date_picker2: 0.5.2
   time_range_picker: 2.2.0
+  numberpicker: ^2.1.1
   # [jmpfbmx] End of fitlife dependencies
 
 dev_dependencies:
