fitlife: Start implement upload image
Signed-off-by: jmpfbmx <jmpf.bmx@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   time_range_picker: 2.2.0
   numberpicker: ^2.1.1
   wakelock: ^0.6.2
+  flimer: 1.0.1
   # [jmpfbmx] End of fitlife dependencies
 
 dev_dependencies:
